src/components/CardList/card.css
.scene {
  left: 0;
  box-sizing: border-box;
  margin: 1em auto 1em auto;
  perspective: 40%;
  width: 24em;
  height: 15em; 
  transform: translate(-50%, -50%);
  -webkit-transform: translate(0%, 0%);
}

.card {
  box-sizing: border-box;
  position: relative;
  height: 100%;
  width: 100%;
  transition: transform 1s;
  transform-style: preserve-3d;
  cursor: pointer;
}

.card.is-flipped {
  transform: rotateY(180deg);
}

.card__face {
  border-radius: 0.2em 0.2em 0em 0em;
  border: 0.05em solid rgb(30, 33, 35);
  position: absolute;
  height: 100%;
  width: 100%;
  font-size: 1em;
  color: rgb(29, 161, 242);
  text-align: center;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
}

.card__face--front {
  /*FIX: Control for unwanted after effect when touching card face*/ 
}

/*FIX: Refactor unneeded card--back styling*/
.card__face--back {
  border: 1px solid rgb(29, 161, 242);
  /*font-size: 1em;*/
  background: rgb(30, 33, 35);
  transform: rotateY(180deg);
}

.download-options {
  margin-top: 2em;
}

.back-content {
  display: flex;
  flex-direction: row;
  justify-content: space-around;

  margin-top: 4em;
  height: 1.5em;
  width: 100%;
}

.back-content-button {
  height: 100%;
  color: white;
  width: 8em;
}

.checkbox {
  height: 1.5em;
  width: 1.5em;
}

.checkbox-container {
  font-size: 1.25em;
}

@supports not (-webkit-touch-callout: none) {
  .back-content-button {
      background-color: rgb(29, 161, 242);
  }

  .scene {
    -webkit-transform: translate(1.180%, 0%);
  }
}

@media screen and (max-width: 400px) and (orientation: portrait) {
  .scene {
    width: 20em;
    height: 12.5em;
  }
}

@media screen and (min-width: 501px) and (orientation: portrait) {
  .scene {
    width: 32em;
    height: 20em;
  }
}

@media screen and (min-width: 501px) and (orientation: landscape) {
  .scene {
    width: 32em;
    height: 20em;
  }

  .card {
  }
}

@media screen and (min-width: 1281px) {
  .scene {
    width: 48em;
    height: 30em;
  }

  .card__face {
    font-size: 1em;
  }

  .checkbox {
    height: 1.25em;
    width: 1.25em;
  }

}

